--- a/web_static/styles/3-header.css
+++ b/web_static/styles/3-header.css
@@ -1,5 +1,5 @@
 header {
-    background-color: white;
+    color: white;
     height: 70px;
     width: 100%;
     border-bottom:  1px solid #CCCCCC;
